[package]
name = "iv"
version = "0.3.2"
authors = ["foldu <foldu@protonmail.com>"]
license = "MIT"

[dependencies]
rayon = "1.0.1"
walkdir = "2.1.4"
pango = "0.4.0"
gio = "0.4.0"
glib = "0.5.0"
gdk = "0.8.0"
gdk-pixbuf = "0.4.0"
gtk = "0.4.0"
failure = "0.1.1"
structopt = "0.2.6"
magic = "0.12.2"
mime = "0.3.5"
serde_derive = "1.0.37"
serde = "1.0.37"
toml = "0.4.6"
directories = "0.10.0"
zip = "0.4.2"
tempfile = "3.0.1"
lazy_static = "1.0.1"
num = "0.1.42"
indexmap = "1.0.1"
noisy_float = "0.1.5"
nom = "4.0.0"

[profile.release]
lto = true
