[package]
name = "iv"
version = "0.3.2"
authors = ["foldu <foldu@protonmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
rayon = "1.0.3"
walkdir = "2.2.7"
pango = "0.5.0"
gio = "0.5.1"
glib = "0.6.1"
gdk = "0.9.0"
gdk-pixbuf = "0.5.0"
gtk = "0.5.0"
failure = "0.1.5"
structopt = "0.2.14"
magic = "0.12.2"
mime = "0.3.13"
serde_derive = "1.0.86"
serde = "1.0.86"
toml = "0.4.10"
directories = "1.0.2"
zip = "0.5.0"
tempfile = "3.0.5"
lazy_static = "1.2.0"
num = "0.2.0"
indexmap = "1.0.2"
noisy_float = "0.1.9"
nom = "4.2.0"

[profile.release]
lto = true
