[package]
name = "iv"
version = "0.3.2"
authors = ["foldu <foldu@protonmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
rayon = "1.1.0"
walkdir = "2.2.9"
pango = "0.7.0"
gio = "0.7.0"
glib = "0.8.1"
gdk = "0.11.0"
gdk-pixbuf = "0.7.0"
gtk = "0.7.0"
failure = "0.1.5"
structopt = "0.2.18"
magic = "0.12.2"
mime = "0.3.13"
serde_derive = "1.0.98"
serde = "1.0.98"
toml = "0.5.3"
directories = "2.0.2"
zip = "0.5.3"
tempfile = "3.1.0"
lazy_static = "1.3.0"
num = "0.2.0"
indexmap = "1.0.2"
noisy_float = "0.1.11"
nom = "4"

[profile.release]
lto = true
